force-app/main/default/objects/leaseworks__Assembly_Utilization__c/leaseworks__Assembly_Utilization__c.object-meta.xml
<CustomObject>
    <label>Assembly Utilization</label>
    <nameField>
        <label>Assembly Utilization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assembly Utilization</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>