force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__APU_Cycles_At_Month_Start__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__APU_Cycles_At_Month_Start__c</fullName>
    <description>APU Cycles counter at the period start</description>
    <inlineHelpText>APU Cycles counter at the period start</inlineHelpText>
    <label>Z_Unused_2507 _APU Cycles At Month Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>