force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comment__c</fullName>
    <description>Any type of additional information</description>
    <inlineHelpText>Any type of additional information</inlineHelpText>
    <label>Comment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>