force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__CSN_As_Per_Airline_Records__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSN_As_Per_Airline_Records__c</fullName>
    <description>CSN that is communicated by airline for the month. This can be used to reconcile the CSN within LeaseWorks by comparing with current CSN at the beginning of the month + FC during the month</description>
    <inlineHelpText>CSN that is communicated by airline for the month. This can be used to reconcile the CSN within LeaseWorks by comparing with current CSN at the beginning of the month + FC during the month</inlineHelpText>
    <label>CSN (As Per Airline Records)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>