force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__CSN_At_Month_End__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSN_At_Month_End__c</fullName>
    <formula>leaseworks__CSN_At_Month_Start__c + leaseworks__Cycles_During_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSN At Month End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>