force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__End_Date_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__End_Date_F__c</fullName>
    <description>End Date of the Utilization</description>
    <formula>leaseworks__Utilization_Report__r.leaseworks__End_Date_F__c</formula>
    <inlineHelpText>End Date of the Utilization</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>