force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__For_The_Month_Ending__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__For_The_Month_Ending__c</fullName>
    <formula>leaseworks__Utilization_Report__r.leaseworks__Month_Ending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Utilization Period End date</inlineHelpText>
    <label>For The Month Ending</label>
    <type>Date</type>
</CustomField>