force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__Has_CSN_Correction_Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Has_CSN_Correction_Utilization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>_Has CSN Correction Utilization</label>
    <type>Checkbox</type>
</CustomField>