force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__Is_Created_By_Trigger__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Is_Created_By_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No validations required if created by trigger</description>
    <label>_Created By Trigger</label>
    <type>Checkbox</type>
</CustomField>