force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__Status_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status_F__c</fullName>
    <formula>text(leaseworks__Utilization_Report__r.leaseworks__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>