force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__TSI__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSI__c</fullName>
    <description>Time Since Installed</description>
    <inlineHelpText>Time Since Installed</inlineHelpText>
    <label>TSI (As Per Airline Records)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>