force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__TSN_At_Month_Start__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSN_At_Month_Start__c</fullName>
    <label>_TSN At Month Start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>