force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__Type_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type_F__c</fullName>
    <formula>Text(leaseworks__Utilization_Report__r.leaseworks__Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization Type</label>
    <type>Text</type>
</CustomField>