force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__Utilization_Report__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization_Report__c</fullName>
    <inlineHelpText>Related Utilization record, where this Assembly Utilization was reported and approved</inlineHelpText>
    <label>Utilization</label>
    <referenceTo>leaseworks__Utilization_Report__c</referenceTo>
    <relationshipLabel>Assembly Utilization</relationshipLabel>
    <relationshipName>UR_List_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>