force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__Y_Hidden_Running_Cycles__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Running_Cycles__c</fullName>
    <label>_Running Cycles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>