force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/leaseworks__Y_Hidden_Unknown_FH_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Unknown_FH_FC__c</fullName>
    <description>This field holds the numeric equivalent of Unknown FH/FC field so that it can be used for Utilization Incomplete Assemblies roll up on Utilization Report</description>
    <formula>if(leaseworks__Unknown_FH_FC__c,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Unknown FH FC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>