force-app/main/default/objects/leaseworks__Assembly_Utilization__c/fields/pro_Flight_Cycles__c.field-meta.xml
<CustomField>
    <fullName>pro_Flight_Cycles__c</fullName>
    <description>Formula rounds FC field up to nearest full number. Created to avoid error in report conditional highlighting on numbers between 0-1</description>
    <formula>ROUND(  leaseworks__Cycles_During_Month__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Cycles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>