force-app/main/default/objects/leaseworks__Assembly_Utilization__c/validationRules/leaseworks__Flight_cycles.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Flight_cycles</fullName>
    <active>true</active>
    <description>Utilization values should always be positive. Please use the True-up for correction if necessary</description>
    <errorConditionFormula>AND(leaseworks__Cycles_During_Month__c  &lt; 0,  leaseworks__Type_F__c != &apos;TSN/CSN Correction&apos;)</errorConditionFormula>
    <errorDisplayField>leaseworks__Cycles_During_Month__c</errorDisplayField>
    <errorMessage>Utilization values should always be positive. Please use the True-up for correction if necessary</errorMessage>
</ValidationRule>