force-app/main/default/objects/leaseworks__Assembly_Utilization__c/validationRules/leaseworks__Flight_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Flight_Hours</fullName>
    <active>true</active>
    <description>Utilization values should always be positive. Please use the True-up for correction if necessary</description>
    <errorConditionFormula>AND(leaseworks__Running_Hours_During_Month__c  &lt; 0, leaseworks__Type_F__c != &#39;TSN/CSN Correction&#39;)</errorConditionFormula>
    <errorDisplayField>leaseworks__Running_Hours_During_Month__c</errorDisplayField>
    <errorMessage>Utilization values should always be positive. Please use the True-up for correction if necessary</errorMessage>
</ValidationRule>