force-app/main/default/objects/leaseworks__Assembly_Utilization__c/validationRules/leaseworks__Invalid_Unknown_FH_FC_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Invalid_Unknown_FH_FC_rule</fullName>
    <active>true</active>
    <description>User has to uncheck the Unknown FH/FC checkbox when FH, FC hold non null values.</description>
    <errorConditionFormula>(!ISNULL(leaseworks__Running_Hours_During_Month__c)  &amp;&amp;  !ISNULL(leaseworks__Cycles_During_Month__c))  &amp;&amp;  leaseworks__Unknown_FH_FC__c</errorConditionFormula>
    <errorMessage>Please unselect the Unknown FH/FC checkbox since FH, FC values are present.</errorMessage>
</ValidationRule>