force-app/main/default/objects/leaseworks__Assembly_Utilization__c/validationRules/leaseworks__Unknown_FH_FC_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Unknown_FH_FC_rule</fullName>
    <active>true</active>
    <description>User can enter null values for FH or FC or both provided Unknown FH/FC checkbox is checked.</description>
    <errorConditionFormula>(ISNULL(leaseworks__Running_Hours_During_Month__c)  ||  ISNULL(leaseworks__Cycles_During_Month__c))  &amp;&amp;  !leaseworks__Unknown_FH_FC__c</errorConditionFormula>
    <errorMessage>Please enter values for FH, FC Or select the Unknown FH/FC checkbox</errorMessage>
</ValidationRule>